# pyinsilicova

./: MANIFEST.in  Pipfile  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: build_wheels.yml  python-package.yml  wheels.yml
insilicova/: __version__.py  api.py  diag.py  exceptions.py  indiv.py  insilicova.py  insilicova_wrapper.py  sampler.py  structures.py  utils.py
insilicova/_sampler/: sampler.cpp
insilicova/data/: causetext.csv  condprob.csv  probbase.csv  probbase5.csv  probbaseV3.csv  probbaseV5.csv  random_physician.csv  randomva1.csv  randomva5.csv  sample_physician.csv
src/insilicova/: api.py  indiv.py  structures.py
src/insilicova/_sampler/: sampler.cpp
src/insilicova/data/: causetextV5.csv  condprobnum.csv  randomva2.csv  sample_category.csv
tests/: test_compare_r.py  test_diag.py  test_indiv.py  test_insilicova.py
